testdata/parser/negative/17.txt
Parse error at 17.pdl:7:4: Unassignable expression
	x + y = 0;
	  ^
